[project]
name = "popcon-matting-bench"
version = "0.1.0"
description = "Matting model benchmark for popcon LINE emoji pipeline"
requires-python = ">=3.11"
dependencies = [
    "rembg>=2.0.50",
    "onnxruntime>=1.17.0",
    "transformers>=4.36.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "scipy>=1.11.0",
    "ultralytics>=8.3.0",
    "einops>=0.7.0",
    "kornia>=0.7.0",
    "timm>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["."]
